--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNAM6jqnj8kvrjq3F1UZGG1",
+      "authorship_tag": "ABX9TyNXmA0CemGL0R3NYnTAVTCJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11534,8 +11534,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **◾ ESCALADO**\n",
-        "**Estandarización de los datos**\n",
+        "### **◼️ ESCALADO** - *Estandarización de los datos*\n",
         "----"
       ],
       "metadata": {
@@ -11563,10 +11562,37 @@
         "df[['fixed acidity_RS', 'volatile acidity_RS', 'citric acid_RS', 'residual sugar_RS', 'chlorides_RS', 'free sulfur dioxide_RS', 'total sulfur dioxide_RS', 'density_RS', 'pH_RS', 'sulphates_RS', 'alcohol_RS']].describe().round(3)"
       ],
       "metadata": {
-        "id": "AwugsXJSHvDx"
+        "id": "AwugsXJSHvDx",
+        "outputId": "3699919e-a24a-47d2-87de-f49b6024f608",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'RobustScaler' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-ced12277c518>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRobustScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fixed acidity_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volatile acidity_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'citric acid_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'residual sugar_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'chlorides_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'free sulfur dioxide_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'total sulfur dioxide_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'density_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pH_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sulphates_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'alcohol_RS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fixed acidity'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volatile acidity'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'citric acid'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'residual sugar'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'chlorides'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'free sulfur dioxide'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'total sulfur dioxide'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'density'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pH'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sulphates'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'alcohol'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fixed acidity_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volatile acidity_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'citric acid_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'residual sugar_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'chlorides_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'free sulfur dioxide_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'total sulfur dioxide_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'density_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'pH_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sulphates_RS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'alcohol_RS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'RobustScaler' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b>7 - MODELADO </b></div>"
+      ],
+      "metadata": {
+        "id": "BqnZsIruleJ0"
+      }
     },
     {
       "cell_type": "markdown",
