--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMO9AvNpjRA/8wxPdcUA7RK",
+      "authorship_tag": "ABX9TyMoqWyd5WEEdK5munWvsPjF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13501,12 +13501,12 @@
         "df.describe(include='category')"
       ],
       "metadata": {
-        "id": "dfoGcWOZIb4P",
-        "outputId": "1d917b4e-dd34-4f42-ee02-d5c7b6329f95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 174
-        }
+        },
+        "id": "dfoGcWOZIb4P",
+        "outputId": "1d917b4e-dd34-4f42-ee02-d5c7b6329f95"
       },
       "execution_count": 82,
       "outputs": [
@@ -14415,11 +14415,11 @@
         "y.dtype"
       ],
       "metadata": {
-        "id": "gb_TKftmzCSD",
-        "outputId": "3db1bc58-343f-4433-89ac-8d737ec96bb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gb_TKftmzCSD",
+        "outputId": "3db1bc58-343f-4433-89ac-8d737ec96bb4"
       },
       "execution_count": 90,
       "outputs": [
@@ -14436,6 +14436,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **◼️ ALGORITMO 1: Regresión Logística Multinomial**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "7bloF9ja59bC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Se dividen los datos en conjuntos de entrenamiento y prueba\n",
@@ -14449,29 +14459,40 @@
         "y_pred = model.predict(X_test)\n",
         "\n",
         "# Se evalua el rendimiento del modelo\n",
-        "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-        "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
-        "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))"
+        "print(\"\\nAccuracy:\", accuracy_score(y_test, y_pred))\n",
+        "print(\"\\nMatrix de Confusión:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "print(\"\\nInforme de Clasificación:\\n\", classification_report(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "2f2Asqv11P_B",
-        "outputId": "bb5fff81-ba9f-4f17-d9f3-12575e058c74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2f2Asqv11P_B",
+        "outputId": "55dcea8e-6548-4c6c-b520-85532e3e62ac"
       },
-      "execution_count": 92,
+      "execution_count": 96,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+            "  warnings.warn(\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
             "Accuracy: 0.5211090107120353\n",
-            "Confusion Matrix:\n",
+            "\n",
+            "Matrix de Confusión:\n",
             " [[ 24  27 250]\n",
             " [  4 335 264]\n",
             " [ 23 192 468]]\n",
-            "Classification Report:\n",
+            "\n",
+            "Informe de Clasificación:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
             "        Alta       0.47      0.08      0.14       301\n",
@@ -14488,8 +14509,6 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
             "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
             "\n",
