--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoqWyd5WEEdK5munWvsPjF",
+      "authorship_tag": "ABX9TyNvU7yNVrcGYlF++ZsHOTyN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -268,30 +268,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 104,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd                             # manejo de datos\n",
-        "import numpy as np                              # manejo de arreglos\n",
-        "import seaborn as sns                           # visualización de gráficos\n",
+        "import pandas as pd                                 # manejo de datos\n",
+        "import numpy as np                                  # manejo de arreglos\n",
+        "import seaborn as sns                               # visualización de gráficos\n",
         "from seaborn import lmplot\n",
-        "import matplotlib.pyplot as plt                 # visualización de gráficos\n",
+        "import matplotlib.pyplot as plt                     # visualización de gráficos\n",
         "#import matplotlib.style as style\n",
-        "import missingno as msno                        # visualización de datos faltantes\n",
-        "from sklearn.preprocessing import LabelEncoder  # conversión de variables categóricas\n",
-        "from sklearn.preprocessing import RobustScaler  # escalado de datos\n",
-        "import scipy.stats as stats                     # análisis estadístico\n",
-        "from scipy.stats import shapiro                 # Test estadístico de Normalidad\n",
-        "import statsmodels.api as sm                    # Gráfico QQ-Plot\n",
+        "import missingno as msno                            # visualización de datos faltantes\n",
+        "from sklearn.preprocessing import LabelEncoder      # conversión de variables categóricas\n",
+        "from sklearn.preprocessing import StandardScaler    # escalado de datos\n",
+        "from sklearn.preprocessing import RobustScaler      # escalado de datos\n",
+        "import scipy.stats as stats                         # análisis estadístico\n",
+        "from scipy.stats import shapiro                     # Test estadístico de Normalidad\n",
+        "import statsmodels.api as sm                        # Gráfico QQ-Plot\n",
         "from statsmodels.regression.linear_model import OLS # para análisis de multicolinealidad (VIF)\n",
         "from statsmodels.tools.tools import add_constant    # para análisis de multicolinealidad (VIF)\n",
         "\n",
-        "\n",
+        "# Librerías de modelado de datos\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.linear_model import LogisticRegression # Regresión Logística\n",
+        "from sklearn.svm import SVC                         # Support Vector Machine (SVM)\n",
+        "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
         "\n",
         "#warnings.filterwarnings(\"ignore\")\n",
@@ -14402,38 +14405,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Se seleccionan las variables independientes y la variable objetivo\n",
+        "# Se seleccionan las características a considerar\n",
         "\n",
-        "features = ['citric acid', 'pH', 'total acidity', 'prop sulful', 'ajust density', 'sweetness', 'sulphate index']\n",
-        "\n",
-        "# X = df.drop(['quality'],axis=1)  # Para seleccionar todas las categorías (a excepción de quality)\n",
-        "X = df[features]  # Variables independientes (predictoras)\n",
-        "y = df['gama']    # Variable objetivo (categórica)\n",
-        "\n",
-        "# Aseguro que la variable objetivo sea categórica\n",
-        "#y = y.astype('gama')\n",
-        "y.dtype"
+        "features = ['citric acid', 'pH', 'total acidity', 'prop sulful', 'ajust density', 'sweetness', 'sulphate index']"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gb_TKftmzCSD",
-        "outputId": "3db1bc58-343f-4433-89ac-8d737ec96bb4"
+        "id": "gb_TKftmzCSD"
       },
-      "execution_count": 90,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "CategoricalDtype(categories=['Baja', 'Media', 'Alta'], ordered=True, categories_dtype=object)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 90
-        }
-      ]
+      "execution_count": 100,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -14444,6 +14424,39 @@
       "metadata": {
         "id": "7bloF9ja59bC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se seleccionan las variables independientes y la variable objetivo\n",
+        "# X = df.drop(['quality'],axis=1)  # Para seleccionar todas las categorías (a excepción de quality)\n",
+        "X = df[features]  # Variables independientes (predictoras)\n",
+        "y = df['gama']    # Variable objetivo (categórica)\n",
+        "\n",
+        "# Aseguro que la variable objetivo sea categórica\n",
+        "#y = y.astype('gama')\n",
+        "y.dtype"
+      ],
+      "metadata": {
+        "id": "YPTZBLcA-pik",
+        "outputId": "b0fe9a52-e54c-4ed2-d850-8ba88d36cfad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CategoricalDtype(categories=['Baja', 'Media', 'Alta'], ordered=True, categories_dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -14468,18 +14481,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2f2Asqv11P_B",
-        "outputId": "55dcea8e-6548-4c6c-b520-85532e3e62ac"
+        "outputId": "e9721324-48b0-4bd2-db97-41a409c4e0fb"
       },
-      "execution_count": 96,
+      "execution_count": 102,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
-            "  warnings.warn(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -14509,6 +14514,8 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:1247: FutureWarning: 'multi_class' was deprecated in version 1.5 and will be removed in 1.7. From then on, it will always use 'multinomial'. Leave it to its default value to avoid this warning.\n",
+            "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/sklearn/linear_model/_logistic.py:465: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
             "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
             "\n",
@@ -14517,6 +14524,85 @@
             "Please also refer to the documentation for alternative solver options:\n",
             "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
             "  n_iter_i = _check_optimize_result(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **◼️ ALGORITMO 2: Support Vector Machine (SVM)**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "A0FFT9dZ77Yb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se seleccionan las variables independientes y la variable objetivo\n",
+        "X = df[['citric acid', 'pH', 'total acidity', 'prop sulful', 'ajust density', 'sweetness', 'sulphate index']]\n",
+        "y = df['gama'].cat.codes  # Convertir las etiquetas a códigos numéricos\n",
+        "\n",
+        "# Se dividen los datos en conjuntos de entrenamiento y prueba\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "\n",
+        "# Se crea y entrena el modelo de SVM para clasificación ordinal\n",
+        "model = make_pipeline(StandardScaler(), SVC(kernel='linear'))\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Se utiliza el modelo entrenado para hacer predicciones sobre el conjunto de prueba\n",
+        "y_pred = model.predict(X_test)\n",
+        "\n",
+        "# Se evalua el rendimiento del modelo\n",
+        "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+        "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "8kwDFSce-KxQ",
+        "outputId": "e99a3800-8c9d-476b-f6ff-a173dc3bf39f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.5431632010081916\n",
+            "\n",
+            "Confusion Matrix:\n",
+            " [[406 197   0]\n",
+            " [227 456   0]\n",
+            " [ 26 275   0]]\n",
+            "\n",
+            "Classification Report:\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.62      0.67      0.64       603\n",
+            "           1       0.49      0.67      0.57       683\n",
+            "           2       0.00      0.00      0.00       301\n",
+            "\n",
+            "    accuracy                           0.54      1587\n",
+            "   macro avg       0.37      0.45      0.40      1587\n",
+            "weighted avg       0.45      0.54      0.49      1587\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
           ]
         }
       ]
