--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvU7yNVrcGYlF++ZsHOTyN",
+      "authorship_tag": "ABX9TyPRPDrdyBaNZkdgojLNh7Z0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 108,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -296,6 +296,9 @@
         "from sklearn.svm import SVC                         # Support Vector Machine (SVM)\n",
         "from sklearn.pipeline import make_pipeline\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+        "\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.miscmodels.ordinal_model import OrderedModel # Regresión Logística Ordinal\n",
         "\n",
         "#warnings.filterwarnings(\"ignore\")\n",
         "\n",
@@ -14438,11 +14441,11 @@
         "y.dtype"
       ],
       "metadata": {
-        "id": "YPTZBLcA-pik",
-        "outputId": "b0fe9a52-e54c-4ed2-d850-8ba88d36cfad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YPTZBLcA-pik",
+        "outputId": "b0fe9a52-e54c-4ed2-d850-8ba88d36cfad"
       },
       "execution_count": 101,
       "outputs": [
@@ -14557,17 +14560,17 @@
         "\n",
         "# Se evalua el rendimiento del modelo\n",
         "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-        "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
-        "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
+        "print(\"\\nMatrix de Confusión:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "print(\"\\nInforme de Clasificación:\\n\", classification_report(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "8kwDFSce-KxQ",
-        "outputId": "e99a3800-8c9d-476b-f6ff-a173dc3bf39f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8kwDFSce-KxQ",
+        "outputId": "00cd3ee7-a5d7-4e8f-93c6-8df386f1e781"
       },
-      "execution_count": 107,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -14575,12 +14578,12 @@
           "text": [
             "Accuracy: 0.5431632010081916\n",
             "\n",
-            "Confusion Matrix:\n",
+            "Matrix de Confusión:\n",
             " [[406 197   0]\n",
             " [227 456   0]\n",
             " [ 26 275   0]]\n",
             "\n",
-            "Classification Report:\n",
+            "Informe de Clasificación:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
             "           0       0.62      0.67      0.64       603\n",
@@ -14603,6 +14606,79 @@
             "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
             "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
             "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **◼️ ALGORITMO 3: Regresión Logística Ordinal**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "JLu8aLWl_v2P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se seleccionan las variables independientes y la variable objetivo\n",
+        "X = df[['citric acid', 'pH', 'total acidity', 'prop sulful', 'ajust density', 'sweetness', 'sulphate index']]\n",
+        "y = df['gama'].cat.codes  # Convertir las etiquetas a códigos numéricos\n",
+        "\n",
+        "# Se dividen los datos en conjuntos de entrenamiento y prueba\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "\n",
+        "# Se crea y entrena el modelo de Regresión Logística Ordinal\n",
+        "model = OrderedModel(y_train, X_train, distr='logit')\n",
+        "result = model.fit(method='bfgs')\n",
+        "\n",
+        "# Se utiliza el modelo entrenado para hacer predicciones sobre el conjunto de prueba\n",
+        "y_pred = result.predict(X_test).idxmax(axis=1)\n",
+        "\n",
+        "# Se evalua el rendimiento del modelo\n",
+        "print(\"\\nAccuracy:\", accuracy_score(y_test, y_pred))\n",
+        "print(\"\\nMatrix de Confusión:\\n\", confusion_matrix(y_test, y_pred))\n",
+        "print(\"\\nInforme de Clasificación:\\n\", classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "hpCZ70wVAdfv",
+        "outputId": "ffc6274d-86af-4776-8329-099cfa0fa469",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Optimization terminated successfully.\n",
+            "         Current function value: 0.878506\n",
+            "         Iterations: 68\n",
+            "         Function evaluations: 70\n",
+            "         Gradient evaluations: 70\n",
+            "\n",
+            "Accuracy: 0.573408947700063\n",
+            "\n",
+            "Matrix de Confusión:\n",
+            " [[384 216   3]\n",
+            " [202 437  44]\n",
+            " [ 20 192  89]]\n",
+            "\n",
+            "Informe de Clasificación:\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.63      0.64      0.64       603\n",
+            "           1       0.52      0.64      0.57       683\n",
+            "           2       0.65      0.30      0.41       301\n",
+            "\n",
+            "    accuracy                           0.57      1587\n",
+            "   macro avg       0.60      0.52      0.54      1587\n",
+            "weighted avg       0.59      0.57      0.56      1587\n",
+            "\n"
           ]
         }
       ]
