--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqhKdA3aW7PGdWygEng8nL",
+      "authorship_tag": "ABX9TyP08gVTKs2cDCC1JLlQE/Km",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15750,12 +15750,12 @@
         "grilla.fit(X_train,y_train)"
       ],
       "metadata": {
-        "id": "FtQ-WdY7ldOf",
-        "outputId": "84ae628c-2904-4df8-92ea-5946aaab3b8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "FtQ-WdY7ldOf",
+        "outputId": "84ae628c-2904-4df8-92ea-5946aaab3b8a"
       },
       "execution_count": 276,
       "outputs": [
@@ -16223,11 +16223,11 @@
         "print(grilla.best_params_)"
       ],
       "metadata": {
-        "id": "zheJy_EmllZw",
-        "outputId": "e50caaa4-79b9-4c65-ca8e-dc5c777d85c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zheJy_EmllZw",
+        "outputId": "e50caaa4-79b9-4c65-ca8e-dc5c777d85c3"
       },
       "execution_count": 277,
       "outputs": [
@@ -16246,11 +16246,11 @@
         "grilla.cv_results_"
       ],
       "metadata": {
-        "id": "GdpPwrQRlpNh",
-        "outputId": "316163cd-3e84-4560-8769-225e0b1a9c26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GdpPwrQRlpNh",
+        "outputId": "316163cd-3e84-4560-8769-225e0b1a9c26"
       },
       "execution_count": 278,
       "outputs": [
@@ -16295,12 +16295,12 @@
         "model_SVM.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "Ttz0XoWalslP",
-        "outputId": "e34ab959-bf5b-4556-9e80-28a139924f04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 154
-        }
+        },
+        "id": "Ttz0XoWalslP",
+        "outputId": "e34ab959-bf5b-4556-9e80-28a139924f04"
       },
       "execution_count": 279,
       "outputs": [
@@ -16773,11 +16773,11 @@
         "#Si utilizan squared=True en la función mean_squared_error, obtendrán el MSE"
       ],
       "metadata": {
-        "id": "-hjRPSM_nvq5",
-        "outputId": "890ea55f-3fa8-425f-99ec-a5a68a539c5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-hjRPSM_nvq5",
+        "outputId": "890ea55f-3fa8-425f-99ec-a5a68a539c5c"
       },
       "execution_count": 281,
       "outputs": [
@@ -16868,21 +16868,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **◾ VALIDACIÓN CRUZADA**\n",
-        "----"
+        "Si bien es posible utilizar la clase OrdinalLogisticRegression de la biblioteca statsmodels para validar una Regresión Logística Ordinal, statsmodels no tiene una implementación directa para GridSearchCV, por lo que se necesitaría una solución personalizada que no será desarrollada en esta oportunidad."
       ],
       "metadata": {
         "id": "eMCEOax-lQuE"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aLAlykHolQBX"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
