--- a/proyecto_Final_INGARAMO.ipynb
+++ b/proyecto_Final_INGARAMO.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMa9iN65eyknxGCF8VyjExX",
+      "authorship_tag": "ABX9TyMKuuPqyp6L/RBhrz9+UZr7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15638,6 +15638,50 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**IMPORTANCIA DE LAS CARACTERÍSTICAS**"
+      ],
+      "metadata": {
+        "id": "Wm939pROAKJ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se calcula la importancia de las características\n",
+        "resultado = permutation_importance(model_RLM, X_train, y_train, scoring='neg_root_mean_squared_error', random_state=42)\n",
+        "importancias= resultado.importances_mean\n",
+        "\n",
+        "# Se muestra la importancia de las características\n",
+        "for i, importancia in enumerate(X.columns):\n",
+        "    print(f\"Importancia de {importancia}: {importancias[i]:.4f}\")"
+      ],
+      "metadata": {
+        "id": "i6kImT4fAGQ5",
+        "outputId": "b2cbecba-b3d9-4971-fb1e-3e6ba0254978",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 320,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Importancia de citric acid: 0.0115\n",
+            "Importancia de pH: 0.0007\n",
+            "Importancia de total acidity: 0.0064\n",
+            "Importancia de prop sulful: 0.0175\n",
+            "Importancia de ajust density: 0.1555\n",
+            "Importancia de sweetness: 0.0056\n",
+            "Importancia de sulphate index: 0.0223\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### **◼️ ALGORITMO 2: Support Vector Machine (SVM)**\n",
         "----"
       ],
@@ -16792,6 +16836,50 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**IMPORTANCIA DE LAS CARACTERÍSTICAS**"
+      ],
+      "metadata": {
+        "id": "sBeiZdijARz3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Se calcula la importancia de las características\n",
+        "resultado = permutation_importance(model_SVM, X_train, y_train, scoring='neg_root_mean_squared_error', random_state=42)\n",
+        "importancias= resultado.importances_mean\n",
+        "\n",
+        "# Se muestra la importancia de las características\n",
+        "for i, importancia in enumerate(X.columns):\n",
+        "    print(f\"Importancia de {importancia}: {importancias[i]:.4f}\")"
+      ],
+      "metadata": {
+        "id": "qaamCpulAVQs",
+        "outputId": "c6bbdb36-5337-4fb6-f670-249823888589",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 321,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Importancia de citric acid: 0.0356\n",
+            "Importancia de pH: 0.0216\n",
+            "Importancia de total acidity: 0.0133\n",
+            "Importancia de prop sulful: 0.0368\n",
+            "Importancia de ajust density: 0.1515\n",
+            "Importancia de sweetness: 0.0192\n",
+            "Importancia de sulphate index: 0.0346\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### **◼️ ALGORITMO 3: Regresión Logística Ordinal**\n",
         "----"
       ],
@@ -16810,8 +16898,8 @@
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
         "\n",
         "# Se crea y entrena el modelo de Regresión Logística Ordinal\n",
-        "model = OrderedModel(y_train, X_train, distr='logit')\n",
-        "result = model.fit(method='bfgs')\n",
+        "model_RLO = OrderedModel(y_train, X_train, distr='logit')\n",
+        "result = model_RLO.fit(method='bfgs')\n",
         "\n",
         "# Se utiliza el modelo entrenado para hacer predicciones sobre el conjunto de prueba\n",
         "y_pred = result.predict(X_test).idxmax(axis=1)\n",
@@ -16823,12 +16911,12 @@
       ],
       "metadata": {
         "id": "hpCZ70wVAdfv",
-        "outputId": "4ce029e3-f549-4a3e-da68-182ca0dac3c2",
+        "outputId": "808511ad-d915-417d-932f-2f264598982a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 223,
+      "execution_count": 322,
       "outputs": [
         {
           "output_type": "stream",
@@ -18020,12 +18108,12 @@
         "importancia_predictores.sort_values('importancia', ascending=False)"
       ],
       "metadata": {
-        "id": "4WtXQrm14tyj",
-        "outputId": "b97602d1-f82f-4c52-e4dc-f607c876fe66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "id": "4WtXQrm14tyj",
+        "outputId": "b97602d1-f82f-4c52-e4dc-f607c876fe66"
       },
       "execution_count": 302,
       "outputs": [
@@ -18356,12 +18444,12 @@
         "grilla.fit(X_train,y_train)"
       ],
       "metadata": {
-        "id": "a5Ngi8vs9sx-",
-        "outputId": "f8dd8f8a-b2f8-4009-861a-b64d91660788",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "a5Ngi8vs9sx-",
+        "outputId": "f8dd8f8a-b2f8-4009-861a-b64d91660788"
       },
       "execution_count": 311,
       "outputs": [
@@ -18827,11 +18915,11 @@
         "grilla.best_params_"
       ],
       "metadata": {
-        "id": "DkFNxFxD-Spd",
-        "outputId": "5f48d6c6-cdd9-4963-9cc0-259937d58a4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DkFNxFxD-Spd",
+        "outputId": "5f48d6c6-cdd9-4963-9cc0-259937d58a4a"
       },
       "execution_count": 312,
       "outputs": [
@@ -18853,11 +18941,11 @@
         "grilla.best_score_"
       ],
       "metadata": {
-        "id": "xItPjqR7-TtN",
-        "outputId": "7034b72e-62df-4b78-f1d3-af1e0682d8b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xItPjqR7-TtN",
+        "outputId": "7034b72e-62df-4b78-f1d3-af1e0682d8b2"
       },
       "execution_count": 313,
       "outputs": [
@@ -18881,12 +18969,12 @@
         "model_KNN.fit(X_train, y_train)"
       ],
       "metadata": {
-        "id": "JKOCK9im-WBc",
-        "outputId": "c473533f-fff3-444e-e233-17919bc3f179",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 154
-        }
+        },
+        "id": "JKOCK9im-WBc",
+        "outputId": "c473533f-fff3-444e-e233-17919bc3f179"
       },
       "execution_count": 315,
       "outputs": [
@@ -19352,11 +19440,11 @@
         "#Si utilizan squared=True en la función mean_squared_error, obtendrán el MSE"
       ],
       "metadata": {
-        "id": "7lJStOQb-xk3",
-        "outputId": "a9a45c9b-46d0-491a-c44d-f42064515573",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7lJStOQb-xk3",
+        "outputId": "a9a45c9b-46d0-491a-c44d-f42064515573"
       },
       "execution_count": 318,
       "outputs": [
@@ -19392,11 +19480,11 @@
         "    print(f\"Importancia de {importancia}: {importancias[i]:.4f}\")"
       ],
       "metadata": {
-        "id": "tKtiVcAm_T2v",
-        "outputId": "e98d15ff-3a02-4660-ff1d-7a59d3db46b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tKtiVcAm_T2v",
+        "outputId": "e98d15ff-3a02-4660-ff1d-7a59d3db46b4"
       },
       "execution_count": 319,
       "outputs": [
